gitignore and userModel added

--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/BotIzer/14AB-D-Backend/issues"
   },
-  "homepage": "https://github.com/BotIzer/14AB-D-Backend#readme"
+  "homepage": "https://github.com/BotIzer/14AB-D-Backend#readme",
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0"
+  }
 }
