--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
-  "name": "bff-backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/BotIzer/14AB-D-Backend.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/BotIzer/14AB-D-Backend/issues"
-  },
-  "homepage": "https://github.com/BotIzer/14AB-D-Backend#readme",
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "http-status-codes": "^2.3.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.0",
-    "morgan": "^1.10.0"
-  }
+    "name": "bff-backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "npx env-cmd -f .env.dev nodemon index.js",
+        "start": "npx env-cmd -f .env.prod nodemon index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/BotIzer/14AB-D-Backend.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/BotIzer/14AB-D-Backend/issues"
+    },
+    "homepage": "https://github.com/BotIzer/14AB-D-Backend#readme",
+    "devDependencies": {
+        "env-cmd": "^10.1.0",
+        "nodemon": "^3.0.1"
+    },
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "http-status-codes": "^2.3.0",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.0.0",
+        "morgan": "^1.10.0"
+    }
 }
