--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-mongo-sanitize": "^2.2.0",
+        "express-rate-limit": "^7.2.0",
         "helmet": "^7.1.0",
+        "hpp": "^0.2.3",
         "http": "^0.0.1-security",
         "http-status-codes": "^2.3.0",
         "jsonwebtoken": "^9.0.2",
