--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
         "mongoose": "^8.0.0",
         "morgan": "^1.10.0",
         "socket.io": "^4.7.4",
+        "swagger-autogen": "^2.23.7",
+        "swagger-ui-express": "^5.0.0",
         "xss-clean": "^0.1.4"
     }
 }
