--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.0.0",
         "morgan": "^1.10.0",
+        "nodemailer": "^6.9.13",
         "socket.io": "^4.7.4",
         "swagger-autogen": "^2.23.7",
         "swagger-ui-express": "^5.0.0",
