--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "nodemon": "^3.0.1"
     },
     "dependencies": {
+        "ably": "^2.0.1",
         "bcrypt": "^5.1.1",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
