.envs updated and email sending now works

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ JWT_COOKIE_EXPIRE=30
 FRONTEND_URL=https://blitzforfriends.vercel.app
 BACKEND_URL=https://blitzforfriends-backend.cyclic.app
 ABLY_API_KEY= -MW5YQ.LWPP2w:Yo9xb93kV7SzH01f4iiqwJJIpdBDQsK2HjVW9e86f6g
+EMAIL=blitzforfriends@gmail.com
+EMAIL_PASS=jrzf spvl fpne mcve
