--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,5 @@ JWT_EXPIRE=30d
 JWT_COOKIE_EXPIRE=30
 FRONTEND_URL=http://localhost:5173
 BACKEND_URL=http://localhost:3000
+EMAIL=blitzforfriends@gmail.com
+EMAIL_PASS=jrzf spvl fpne mcve
