socket.io is done for development

--- a/.env.dev
+++ b/.env.dev
@@ -6,3 +6,4 @@ FRONTEND_URL=http://localhost:5173
 BACKEND_URL=http://localhost:3000
 EMAIL=blitzforfriends@gmail.com
 EMAIL_PASS=jrzf spvl fpne mcve
+NODE_ENV="development"
