--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ BACKEND_URL=https://blitzforfriends-backend.cyclic.app
 ABLY_API_KEY= -MW5YQ.LWPP2w:Yo9xb93kV7SzH01f4iiqwJJIpdBDQsK2HjVW9e86f6g
 EMAIL=blitzforfriends@gmail.com
 EMAIL_PASS=jrzf spvl fpne mcve
+NODE_ENV="production"
