.envs updated and tests are gone recently by email auth

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ JWT_COOKIE_EXPIRE=30
 FRONTEND_URL=https://blitzforfriends.vercel.app
 BACKEND_URL=https://blitzforfriends-backend.cyclic.app
 ABLY_API_KEY= -MW5YQ.LWPP2w:Yo9xb93kV7SzH01f4iiqwJJIpdBDQsK2HjVW9e86f6g
+EMAIL_HOST=smtp.gmail.com
 EMAIL=blitzforfriends@gmail.com
 EMAIL_PASS=jrzf spvl fpne mcve
 NODE_ENV="production"
